[metadata]
name = ezre-HeuronPatapon
version = attr: ezre.__version__
author = Heuron Patapon
author_email = heuron-patapon@laposte.net
description = Wrapper around the `re` module for easier management of regular expressions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HeuronPatapon/ezre.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src